--- a/lab-beeksma/package.json
+++ b/lab-beeksma/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^4.6.1",
     "mocha": "^3.5.0",
     "supertest": "^3.0.0"
   }
