--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ sudo: required
 services:
   - mongodb
 env:
-  - MONGODB_URI=mongodb://localhost/test
+  - MONGODB_URI=mongodb://localhost/401-dvgram
+  - APP_SECRET=DeltaV
 script:
   - |
     (for dir in $(find $PWD -maxdepth 2 -name package.json -printf "%h\n"); do
