--- a/jason-lab/package.json
+++ b/jason-lab/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.4",
     "debug": "^3.0.1",
     "dotenv": "^4.0.0",
+    "eslint": "^4.6.1",
     "express": "^4.15.4",
     "http-errors": "^1.6.2",
     "jsonwebtoken": "^7.4.3",
